# hl-houdini

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  Test.hx  compile.hxml  haxelib.json
assets/: test.hiplc
generator/: houdiniengine.idl
generator/houdiniengine/: Generator.hx
houdini/: Native.hx  Node.hx  Session.hx
src/: hlhapiutil.cpp  hlhapiutil.hpp
